Fix and improve search books

--- a/resources/assets/css/style.css
+++ b/resources/assets/css/style.css
@@ -93,7 +93,7 @@ input:-webkit-autofill:focus {
     -webkit-box-shadow: 0 0 0px 1000px white inset !important;
 }
 
-#search-book {
+#search-book, #search-book-google {
    width: 100%;
    padding: 3px 5px;
    font-size: 24px;
@@ -105,17 +105,13 @@ input:-webkit-autofill:focus {
    outline: none;
 }
 
-.category-container {
-    padding-right: 0;
-}
-
 .search-result {
     max-height: 200px;
     overflow: auto;
     padding-right: 0;
 }
 
-#data-search {
+#data-search, #data-search-google {
     /* Remove default list styling */
     list-style-type: none;
     padding: 0;
@@ -123,7 +119,7 @@ input:-webkit-autofill:focus {
 
 }
 
-#data-search li a {
+#data-search li a, #data-search-google li a {
     border: 1px solid #ddd; /* Add a border to all links */
     margin-top: -1px; /* Prevent double borders */
     background-color: #f6f6f6; /* Grey background color */
@@ -134,12 +130,12 @@ input:-webkit-autofill:focus {
     display: block; /* Make it into a block element to fill the whole list */
 }
 
-#data-search li a.header {
+#data-search li a.header, #data-search-google li a.header {
     background-color: #e2e2e2; /* Add a darker background color for headers */
     cursor: default; /* Change cursor style */
 }
 
-#data-search li a:hover:not(.header) {
+#data-search li a:hover:not(.header), #data-search-google li a:hover:not(.header) {
     background-color: #eee; /* Add a hover effect to all links, except for headers */
 }
 
