Show count view page detail

--- a/views/books/detail.ejs
+++ b/views/books/detail.ejs
@@ -39,6 +39,7 @@
                         <div class="space-10"></div>
                         <div class="row">
                             <div class="col-xs-12 col-sm-8">
+                                <h4 class="tip-left">Count view: <%= data.item.count_view %></h4>
                                 <h4 class="tip-left">Author</h4>
                                 <div class="media">
                                     <% if (typeof (data.item.author) != 'undefined' && data.item.author) { %>
