--- a/views/shared/myBooks.ejs
+++ b/views/shared/myBooks.ejs
@@ -14,7 +14,9 @@
                     </div>
                     <div class="media-body">
                         <% if (typeof (book.title) != 'undefined' && book.title) { %>
-                            <h5 title="<%= book.title %>"><%= getString(book.title, configs.book.title_limit_characters) %></h5>
+                            <h5 title="<%= book.title %>" data-toggle="tooltip">
+                                <%= getString(book.title, configs.book.title_limit_characters) %>
+                            </h5>
                         <% } else {%>
                             <h6>No title</h6>
                         <% } %>
