--- a/views/books/add.ejs
+++ b/views/books/add.ejs
@@ -16,7 +16,7 @@
         <div class="space-60"></div>
         <div class="row">
             <div class="col-xs-12 col-sm-8 col-sm-offset-2 col-md-6 col-md-offset-3 ">
-                <form action="/books/add" id="form-add-book" method="post" enctype="multipart/form-data">
+                <form action="#" id="form-add-book" enctype="multipart/form-data">
                     <div class="row">
                         <div class="col-xs-12 col-sm-6">
                             <div class="form-group">
@@ -53,7 +53,7 @@
                         <div class="col-xs-12 col-sm-6" >
                             <div class="form-group">
                                 <label for="publish_date">Publish date</label>
-                                <input type="text" id="publish_date" name="publish_date" class="form-control bg-danger datepicker" placeholder="Enter your book code..." required="required">
+                                <input type="text" id="publish_date" name="publish_date" class="form-control bg-danger datepicker" placeholder="Enter your book code...">
                             </div>
                         </div>
                         <div class="col-xs-12 col-sm-6">
@@ -115,6 +115,7 @@
                         <div class="space-20"></div>
                         <div class="col-xs-12 col-sm-6">
                             <button type="submit" class="btn btn-primary btn-xs" id="btn-add-book">Create Book<i class="fa fa-long-arrow-right"></i></button>
+                            <input type="reset" class="btn btn-danger btn-xs"/>
                         </div>
                     </div>
                 </form>
@@ -125,9 +126,9 @@
 </section>
 
 <%- contentFor('appjs') %>
+<script src="/javascripts/books/book.js" type="text/javascript"></script>
 <script type="text/javascript">
     $('#publish_date').datepicker();
-
     $('#form-add-book').validate({
         highlight: function(element) {
             $(element).closest('.form-group').addClass('has-error');
@@ -140,6 +141,11 @@
         errorPlacement: function(error, element) {
             error.insertAfter(element);
         }
+    });
+
+    $('#btn-add-book').on('click', function (e) {
+        e.preventDefault();
+        Book.addNew();
     });
 
 </script>
