--- a/views/layout/template.ejs
+++ b/views/layout/template.ejs
@@ -25,6 +25,7 @@
     <link rel="stylesheet" href="/css/theme.css">
     <link rel="stylesheet" href="/css/style.css">
     <link rel="stylesheet" href="/css/responsive.css">
+    <link href="/bower/bootstrap-datepicker/dist/css/bootstrap-datepicker3.min.css" rel="stylesheet">
     <script src="/bower/modernizr/modernizr.js"></script>
     <% if(locals.appCss) { %>
     <%- appCss %>
@@ -75,6 +76,7 @@
 <script src="/javascripts/books/search.js" type="text/javascript"></script>
 <script src="/bower/jquery-validation/dist/jquery.validate.min.js"></script>
 <script src="/bower/remarkable-bootstrap-notify/dist/bootstrap-notify.min.js"></script>
+<script src="/bower/bootstrap-datepicker/dist/js/bootstrap-datepicker.min.js"></script>
 <script>
     function showNotify(type, message, option, setting) {
         if (!!message) {
