--- a/views/layout/header.ejs
+++ b/views/layout/header.ejs
@@ -56,7 +56,7 @@
                                         <a href="#"> <span><i class="icofont icofont-notification"></i></span> Notifications</a>
                                     </li>
                                     <li>
-                                        <a href="#"> <span><i class="icofont icofont-settings"></i></span> Settings</a>
+                                        <a href="/books/add"> <span><i class="icofont icofont-ui-add"></i></span> Add Books </a>
                                     </li>
                                     <li>
                                         <a href="#"> <span><i class="icofont icofont-read-book"></i></span> My Books</a>
