--- a/views/layout/template.ejs
+++ b/views/layout/template.ejs
@@ -77,6 +77,7 @@
 <script src="/bower/jquery-validation/dist/jquery.validate.min.js"></script>
 <script src="/bower/remarkable-bootstrap-notify/dist/bootstrap-notify.min.js"></script>
 <script src="/bower/bootstrap-datepicker/dist/js/bootstrap-datepicker.min.js"></script>
+<script src="/bower/jquery-form/dist/jquery.form.min.js"></script>
 <script>
     function showNotify(type, message, option, setting) {
         if (!!message) {
