--- a/views/books/detail.ejs
+++ b/views/books/detail.ejs
@@ -15,7 +15,7 @@
         </div>
         <div class="row">
             <div class="col-xs-12 col-md-6 book-list-position padding60  ">
-                <div class="book-list-photo ">
+                <div class="book-list-photo">
                     <% if (typeof(data.item.media) != 'undefined') { %>
                         <div class="book-list">
                             <% data.item.media.forEach(function (image) { %>
@@ -106,11 +106,64 @@
                             </div>
                         </div>
                         <div class="space-20"></div>
-                        <button class="btn btn-primary hover-btn-default btn-xs" id="booking-book" data-id="<%= data.item.id %>" data-status="<%= data.item.btn_booking.data_status %>"><%= data.item.btn_booking.text %></button>
+                        <button type="button" class="btn btn-primary" data-toggle="modal" data-target="#myModal"> <%= data.item.btn_booking.text %> </button>
                     </div>
                 </div>
             </div>
         </div>
+
+        <!--Begin Modal Owner-->
+        <div aria-labelledby="myModalLabel" class="modal fade" id="myModal" role="dialog" style="display: none;" tabindex="-1">
+            <div class="modal-dialog" role="document">
+                <div class="modal-content">
+                    <div class="modal-header">
+                        <button aria-label="Close" class="close" data-dismiss="modal" type="button"><span aria-hidden="true">×</span></button>
+                        <h5 class="modal-title" id="myModalLabel">
+                            Bạn muốn mượn sách <%= data.item.title %> của ai ?
+                        </h5>
+                    </div>
+                    <div class="modal-body">
+                        <form action="/books/booking/<%= data.item.id %>" method="post" id="form-booking-book" novalidate="novalidate">
+                            <input type="hidden" name="status" value="<%= data.item.btn_booking.status %>">
+                            <div class="row">
+                                <div class="col-xs-12 col-sm-6">
+                                    <div class="checkbox">
+                                        <label for="owner_id_01">
+                                            <input type="radio" id="owner_id_01" name="owner_id" value="1" required aria-required="true"/> Owner_01
+                                        </label>
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="row">
+                                <div class="col-xs-12 col-sm-6">
+                                    <div class="checkbox">
+                                        <label for="owner_id_02">
+                                            <input type="radio" id="owner_id_02" name="owner_id" value="1"/> Owner_01
+                                        </label>
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="row">
+                                <div class="col-xs-12 col-sm-6">
+                                    <div class="checkbox">
+                                        <label for="owner_id_03">
+                                            <input type="radio" id="owner_id_03" name="owner_id" value="1"/> Owner_01
+                                        </label>
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="row">
+                                <div class="col-xs-12 col-sm-6">
+                                    <button type="submit" class="btn btn-primary btn-xs" id="booking-book"><%= data.item.btn_booking.text %><i class="fa fa-long-arrow-right"></i></button>
+                                    <input type="reset" class="btn btn-danger btn-xs"/>
+                                </div>
+                            </div>
+                        </form>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <!--End Modal Owner-->
     </div>
 </section>
 <section class="relative">
@@ -310,13 +363,6 @@
         errorPlacement: function(error, element) {
         error.insertAfter(element);
     }});
-
-    $('#booking-book').on('click', function (e) {
-        var status = $(this).attr('data-status');
-        var bookId = $(this).attr('data-id');
-
-        Book.booking(bookId,status);
-    });
 
 </script>
 <script src="/bower/bootstrap-star-rating/js/star-rating.js"></script>
